--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = python-manilaclient
-url = http://tarballs.openstack.org/python-manilaclient/python-manilaclient-1.28.0.tar.gz
+url = http://tarballs.openstack.org/python-manilaclient/python-manilaclient-1.29.0.tar.gz
 archives = 
 giturl = https://github.com/openstack/python-manilaclient.git
 
@@ -33,6 +33,8 @@ insecure_build = false
 keepstatic = false
 # do not require autostart subpackage
 no_autostart = false
+# do not generate debuginfo for this package
+nodebug = false
 # disable stripping binaries
 nostrip = false
 # optimize build for size over speed
