Fix up pypi provides and requires

--- a/options.conf
+++ b/options.conf
@@ -4,6 +4,7 @@ url = http://tarballs.openstack.org/python-manilaclient/python-manilaclient-2.0.
 archives = 
 giturl = https://github.com/openstack/python-manilaclient.git
 domain = 
+alias = 
 
 [autospec]
 # build 32 bit libraries
