--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = python-manilaclient
-url = http://tarballs.openstack.org/python-manilaclient/python-manilaclient-2.0.0.tar.gz
+url = http://tarballs.openstack.org/python-manilaclient/python-manilaclient-2.1.0.tar.gz
 archives = 
 giturl = https://github.com/openstack/python-manilaclient.git
 domain = 
@@ -39,6 +39,8 @@ no_autostart = false
 nodebug = false
 # disable stripping binaries
 nostrip = false
+# configure build also for openmpi
+openmpi = false
 # optimize build for size over speed
 optimize_size = false
 # set profile for pgo
